crates/mun_codegen/src/snapshots/test__compare_op_bool.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn equals(a: bool, b: bool) -> bool { a == b }\npub fn not_equal(a: bool, b: bool) -> bool { a != b}\npub fn less(a: bool, b: bool) -> bool { a < b }\npub fn less_equal(a: bool, b: bool) -> bool { a <= b }\npub fn greater(a: bool, b: bool) -> bool { a > b }\npub fn greater_equal(a: bool, b: bool) -> bool { a >= b }"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo.1 = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo.1 addrspace(4)*]

define i1 @equals(i1 %0, i1 %1) {
body:
  %eq = icmp eq i1 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i1 %0, i1 %1) {
body:
  %neq = icmp ne i1 %0, %1
  ret i1 %neq
}

define i1 @less(i1 %0, i1 %1) {
body:
  %less = icmp ult i1 %0, %1
  ret i1 %less
}

define i1 @less_equal(i1 %0, i1 %1) {
body:
  %lesseq = icmp ule i1 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i1 %0, i1 %1) {
body:
  %greater = icmp ugt i1 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i1 %0, i1 %1) {
body:
  %greatereq = icmp uge i1 %0, %1
  ret i1 %greatereq
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::bool>"]

